/**
 * Copyright (C) 2009-2017 Lightbend Inc. <http://www.lightbend.com>
 * Copyright (C) 2013-2017 Akka.NET project <https://github.com/akkadotnet/akka.net>
 */

syntax = "proto3";
package Akka.Persistence.Serialization.Proto.Msg;

message PersistentMessage {
  PersistentPayload payload = 1;
  int64 sequenceNr = 2;
  string persistenceId = 3;
  bool deleted = 4; // not used in new records from 2.4
  string sender = 11; // not stored in journal, needed for remote serialization 
  string manifest = 12;
  string writerGuid = 13;
}

message PersistentPayload {
  int32 serializerId = 1;
  bytes payload = 2;
  bytes payloadManifest = 3;
}
